[project]
name = "ntlmv1-multi"
version = "0.1.1"
description = "Reverse/format NTLMv1 challenge-responses into hashcat mode 14000 (and convert to NTLM)"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pycryptodome>=3.20",
]

[project.scripts]
ntlmv1-multi = "ntlmv1_nextgen:main"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ntlmv1_nextgen"]
